SDEV-1909: evaluate all applicable auto waivers (#13377)